--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
     <nav id="navbar">
         <div class="logo">Пътна помощ MAXI</div>
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-        <ul class="menu">
-            <li><a href="#services">Услуги</a></li>
-            <li><a href="#about">За нас</a></li>
-            <li><a href="#contact">Контакти</a></li>
-        </ul>
     </nav>
 
-    <!-- Overlay Navigation -->
-    <div id="overlay-menu" class="overlay">
+    <!-- Sidebar Navigation -->
+    <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">×</a>
-        <div class="overlay-content">
-            <a href="#services">Услуги</a>
-            <a href="#about">За нас</a>
-            <a href="#contact">Контакти</a>
-        </div>
+        <a href="#services">Услуги</a>
+        <a href="#about">За нас</a>
+        <a href="#contact">Контакти</a>
     </div>
 
     <!-- Hero Section -->
