--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <!-- Top Bar with Social and Contact Info -->
-    <div class="top-bar">
-        <div class="social">
-            <span>Социални мрежи:</span>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-        </div>
-        <div class="contact-info">
-            <span>Контакти</span>
-            <a href="mailto:office@putnapomoshtmaxi.com">office@putnapomoshtmaxi.com</a>
-        </div>
-    </div>
-
     <!-- Navigation Menu -->
     <nav id="navbar">
         <div class="logo">
@@ -51,11 +39,51 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Пътна помощ MAXI 24/7</h1>
-            <p>Денонощна пътна помощ в гр. София</p>
+            <p>Денонощна пътна помощ в гр. София и региона.</p>
             <a href="tel:+359894303029" class="cta-button">📞 +359 894 30 30 29</a>
         </div>
         <img src="tow-truck.png" alt="Tow Truck" class="hero-image">
     </header>
 
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>Нашите услуги</h2>
+        <div class="service-card">
+            <img src="towing.png" alt="Репатриране">
+            <h3>Репатриране</h3>
+            <p>Леки автомобили, джипове, ванове, селскостопанска техника до 5 тона.</p>
+            <a href="#" class="more-button">Виж Повече</a>
+        </div>
+        <div class="service-card">
+            <img src="battery.png" alt="Подаване на ток">
+            <h3>Подаване на ток</h3>
+            <p>Помощ за подаване на стартов ток към акумулатора.</p>
+            <a href="#" class="more-button">Виж Повече</a>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Контакти</h2>
+        <div class="contact-info">
+            <div class="info-item">
+                <span>📍</span>
+                <p>гр. София</p>
+            </div>
+            <div class="info-item">
+                <span>📞</span>
+                <p>0894 30 30 29</p>
+            </div>
+            <div class="info-item">
+                <span>📧</span>
+                <p>office@putnapomoshtmaxi.com</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Пътна помощ MAXI. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
