--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пътна помощ MAXI 24/7</title>
+    <title>Пътна помощ 24/7</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
@@ -38,8 +38,8 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="hero-content">
-            <h1>Пътна помощ MAXI 24/7</h1>
-            <p>Денонощна пътна помощ в гр. София и региона.</p>
+            <h1>Пътна помощ 24/7</h1>
+            <p>Денонощна пътна помощ в гр. Карлово и региона.</p>
             <a href="tel:+359894303029" class="cta-button">📞 +359 894 30 30 29</a>
         </div>
         <img src="tow-truck.png" alt="Tow Truck" class="hero-image">
@@ -68,7 +68,7 @@
         <div class="contact-info">
             <div class="info-item">
                 <span>📍</span>
-                <p>гр. София</p>
+                <p>гр. Карлово</p>
             </div>
             <div class="info-item">
                 <span>📞</span>
@@ -76,14 +76,14 @@
             </div>
             <div class="info-item">
                 <span>📧</span>
-                <p>office@putnapomoshtmaxi.com</p>
+                <p>office@putnapomosht.com</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Пътна помощ MAXI. All Rights Reserved.</p>
+        <p>&copy; 2024 Пътна помощ . All Rights Reserved.</p>
     </footer>
 </body>
 </html>
