--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Menu -->
     <nav id="navbar">
         <div class="logo">
-            <img src="logo.png" alt="Пътна помощ MAXI Logo">
+            <img src="logo.png" alt="Пътна помощ">
         </div>
         <ul class="nav-links">
             <li><a href="#services">Услуги</a></li>
